running simulation with psz projects
metashape does not allow to modify the projections/tie_points coordinates using psx files, but it works with .psz. All the simulations are carried out with old .psz files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "thirdparty/automate-metashape"]
 	path = thirdparty/automate-metashape
 	url = git@github.com:open-forest-observatory/automate-metashape.git
+[submodule "thirdparty/metashape-scripts"]
+	path = thirdparty/metashape-scripts
+	url = git@github.com:agisoft-llc/metashape-scripts.git
