--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires      = ["setuptools>=65", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "metashape"
+name = "metashapelib"
 version = "0.0.1"
 description = ""
 readme = "README.md"
@@ -33,30 +33,44 @@ requires-python = ">=3.8"
 [project.optional-dependencies]
 dev = ["ruff", "black", "bumpver", "isort", "pip-tools", "pytest", "bumpver", "mkdocs", "mkdocs-material", "mkdocstrings[python]"]
 
-[project.urls]
-Homepage = "https://github.com/franioli/deep-image-matching"
+[project.urls]    
+    Homepage = "https://github.com/3DOM-FBK/deep-image-matching"
+    Documentation = "https://3dom-fbk.github.io/deep-image-matching/"
+    Download = "https://github.com/3DOM-FBK/deep-image-matching"
+    "Source Code" = "https://github.com/3DOM-FBK/deep-image-matching"
 
 [tool.pytest.ini_options]
-addopts = [
-    "--import-mode=importlib",
-]
+  addopts = [
+      "--import-mode=importlib",
+  ]
+    
+[tool.bumpver]
+  current_version = "1.0.0"
+  version_pattern = "MAJOR.MINOR.PATCH"
+  commit_message = "bump version {old_version} -> {new_version}"
+  commit = true
+  tag = false
+  push = false
+
+  [tool.bumpver.file_patterns]
+    "pyproject.toml" = [
+        'current_version = "{version}"', 
+        'version = "{version}"'
+    ]
+    "src/metashapelib/__init__.py" = [
+        "{version}"
+    ]
 
 [tool.isort]
-profile = "black"
+  profile = "black"
 
-[tool.bumpver]
-current_version = "0.0.1"
-version_pattern = "MAJOR.MINOR.PATCH"
-commit_message = "bump version {old_version} -> {new_version}"
-commit = true
-tag = true
-push = true
+[tool.ruff]
+  line-length = 120
 
-[tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'current_version = "{version}"', 
-    'version = "{version}"'
-]
-"src/deep_image_matching/__init__.py" = [
-    "{version}"
-]
+  [tool.ruff.lint]
+    select = ["E9","F63","F7","F82"]
+    ignore = ["E501"]
+
+  [tool.ruff.lint.per-file-ignores]
+    "*/__init__.py" = ["F401", "F403"] # Allow unused imports and star imports
+    "src/metashapelib/__init__.py" = ["I001"] # Allow unsorted imports
