--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ dependencies = [
     "opencv-python",
     "tqdm",
     "joblib",
+    "open3d",
+    "dask",
+    "laspy",
+    "seaborn",
+    "plotly",
 ]
 requires-python = ">=3.8"
 
